--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -1,3 +1,9 @@
+:root {
+    --main-dark-color: #617778;
+    --main-dark-comp-color: #E4DEDE;
+    --main-light-color: #dbdbd0;
+}
+
 .sidebar {
     height: 100%;
     width: 210px;
@@ -86,14 +92,8 @@
     margin-left: 20px;
 }
 
-.sticky-nav {
-    position: sticky;
-    top: 0;
-}
-
 .footer {
     margin-top: auto;
-    margin-left: 50px;
     padding-right: 50px;
     display: flex;
     flex-wrap: wrap;
@@ -109,3 +109,100 @@
 }
 
 .footer h3 { font-size: 1rem }
+
+.navbar {
+    background: transparent !important;
+    color: black;
+    width: 100%;
+    transition: all .7s;
+}
+
+.nav-color {
+    background: #EFF1ED;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    transition: all .7s;
+}
+
+.navbar-wrapper .active-color {
+    height: 100%;
+}
+
+.navbar-wrapper {
+    z-index: 9998;
+    position: sticky;
+    top: 0;
+}
+
+.sticky-nav {
+    position: absolute;
+    top: 0;
+}
+
+.navbar .non-transparent {
+    background: #EFF1ED !important;
+}
+
+.navbar-expand .navbar-collapse {
+    gap: 20px;
+    margin-right: 25px;
+}
+
+.navbar-brand {
+    margin-left: 20px;
+}
+
+.navbar-link {
+    color: black;
+    font-size: 1.1rem;
+    text-decoration: none;
+}
+
+.navbar-link:hover {
+    color: var(--main-dark-comp-color);
+}
+
+.active .navbar-link:hover {
+    color: var(--main-dark-color);
+}
+
+.navbar-brand .navbar-link {
+    font-size: 1.3rem;
+}
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+}
+
+.hover-underline-animation:after,
+.navbar-collapse .active:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--main-dark-comp-color);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.navbar-collapse .active:after,
+.tabs .active:after {
+    transform: scaleX(1);
+}
+
+.active .hover-underline-animation:after {
+    background-color: var(--main-dark-color);
+}
+  
+.hover-underline-animation:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
