--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -2,6 +2,7 @@
     --main-dark-color: #617778;
     --main-dark-comp-color: #E4DEDE;
     --main-light-color: #dbdbd0;
+    --main-dark-hover-color: #94a8a9;
 }
 
 .sidebar {
@@ -16,7 +17,7 @@
     padding-top: 20px;
     transition: all 0.5s ease;
     box-shadow: 0px 0px 10px rgba(0,0,0,.5);
-    z-index: 9998;
+    z-index: 998;
 }
 
 .sidebar:hover {   
@@ -92,6 +93,110 @@
     margin-left: 20px;
 }
 
+.navbar-wrapper > .navbar > .navbar-burger {
+    display: none !important;
+}
+.navbar-burger > .navbar-text {
+    padding: 2px 10px;
+    border-radius: 50%;
+    color: black;
+    font-size: 1.3rem;
+}
+.navbar-burger > .navbar-text:active {
+    background: #e0e0e0;
+}
+
+.navbar-burger #burger,
+.navbar-burger #cross {
+    font-size: 0;
+    transition: font-size .5s;
+    transition-delay: 0s;
+}
+.navbar-burger #burger:hover,
+.navbar-burger #cross:hover {
+    color: var(--main-dark-hover-color);
+}
+.navbar-burger #burger:active,
+.navbar-burger #cross:active {
+    color: black;
+}
+.navbar-burger #burger.activeMenu,
+.navbar-burger #cross.activeMenu {
+    font-size: 1.3rem;
+    transition-delay: .4s;
+}
+
+.sidemenu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 998;
+    height: 100%;
+    width: 0;
+    background: #EFF1ED;
+    transition: width 0.7s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    white-space: nowrap;
+    padding-top: 100px;
+}
+
+.sidemenu::before {
+    content: "";
+    height: 100%;
+    width: 100vw;
+    opacity: 0;
+    transition: all 0.7s ease-in-out;
+    background: black;
+    position: absolute;
+    right: 0;
+    top: 0;
+    pointer-events: none;
+}
+
+.sidemenu ul { padding-left: 0; }
+
+.sidemenu a {
+    color: black;
+    font-size: 1.3rem;
+    text-decoration: none;
+    display: block;
+    margin-left: 80px;
+    opacity: .2;
+    transition: opacity, margin-left 0.4s ease-in-out;
+    transition-delay: .4s;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.sidemenu a:hover {
+    background: var(--main-dark-hover-color);
+}
+
+.sidemenu a:nth-child(0) { transition-delay: .3s; }
+.sidemenu a:nth-child(1) { transition-delay: .35s; }
+.sidemenu a:nth-child(2) { transition-delay: .4s; }
+.sidemenu a:nth-child(3) { transition-delay: .45s; }
+.sidemenu a:nth-child(4) { transition-delay: .5s; }
+.sidemenu a:nth-child(5) { transition-delay: .55s; }
+.sidemenu a:nth-child(6) { transition-delay: .6s; }
+
+.sidemenu a i {
+    margin-right: 30px;
+}
+
+.sidemenu a:last-child {
+    position: fixed;
+    bottom: 5px;
+    width: 280px;
+}
+
+.sidemenu.active a {
+    margin-left: 0;
+    opacity: 1;
+}
+
 .footer {
     margin-top: auto;
     padding-right: 50px;
@@ -102,14 +207,23 @@
     height: fit-content;
     background: #222222;
     color: white;
-    padding-top: 20px;
+    padding-top: 50px;
+    padding-bottom: 20px
 }
 
 .footer h2 {
-    font-size: 1.7rem;
+    font-size: 1.4rem;
 }
-
-.footer h3 { font-size: 1rem }
+.footer-left h3 { 
+    font-size: .9rem;
+    color: white;
+}
+.footer a { color: white; }
+.footer a:hover { color: teal; }
+.footer-right h3 { 
+    font-size: .8rem;
+    text-transform: uppercase;
+}
 
 .footer-right h3 { margin-bottom: 0; }
 .footer p { font-size: .85rem }
@@ -138,7 +252,7 @@
 }
 
 .navbar-wrapper {
-    z-index: 9998;
+    z-index: 999;
     position: sticky;
     top: 0;
 }
@@ -238,4 +352,25 @@
     border-color: var(--main-dark-color);
     background-color: var(--main-light-color);
     color: var(--main-dark-color);
+}
+@media (max-width: 770px) {
+    .sidemenu.active{
+        width: 280px;
+    }
+    .sidemenu.active::before {
+        opacity: 0.4;
+        width: calc(100vw - 280px);
+        right: 280px;
+    }
+    .navbar-wrapper > .navbar > .navbar-links {
+        display: none !important;
+    }
+    .navbar-brand .navbar-link {
+        margin-top: 20px;
+        font-size: 1.3rem;
+        transition: all 0.5s;
+    }
+    .navbar-wrapper > .navbar >.navbar-burger {
+        display: flex !important;
+    }
 }
