--- a/src/views/views.css
+++ b/src/views/views.css
@@ -30,7 +30,8 @@
 }
 
 .backarrow:hover,
-.linkarrow:hover { color: var(--main-dark-hover-color); }
+.linkarrow:hover,
+.ledigt .backarrow:hover { color: var(--main-dark-hover-color); }
 .backarrow:active,
 .linkarrow:active { transform: scale(0.9); }
 
@@ -221,11 +222,12 @@
 }
 
 .hem .nyheter {
-    margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 80px;
-    width: 100vw;
+    overflow: hidden;
+    position: relative;
     margin-left: -30px;
+    margin-right: -30px;
 }
 
 .hem .nyhet { 
@@ -234,7 +236,9 @@
     padding-right: 70px;
     padding-bottom: 30px;
     padding-top: 30px;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .hem .nyhet:nth-child(even) {
@@ -243,6 +247,10 @@
 
 .hem .nyhets-text {
     white-space: pre-line;
+}
+
+.ledigt {
+    padding-top: 20px;
 }
 
 .login {
@@ -436,26 +444,28 @@ select {
 .admin-content .file-upload {
     margin-top: 30px;
 }
-.lagenhet-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    width: min(1000px, 100%);
-    padding-top: 20px;
-    margin: 0 auto;
-    border-radius: 10px;
-}
-.lagenhet-info-left {
+
+.lagenhet-info-detalj {
+    display: grid;
+    margin-top: 20px;
+    grid-template-columns: 400px 400px;
     text-align: left;
-    width: min(30%, 1500px);
-    margin-bottom: 20px;
+    justify-content: center;
+    margin-left: 200px;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+    font-size: 1.06em;
 }
+
+.lagenhet-info-detalj i { width: 30px}
+
 .lagenhet-info-right {
-    width: min(1000px, 50%);
+    display: flex;
+    justify-content: center;
     text-align: left;
+    font-size: 1.2rem;
 }
-.lagenhet-info-left i { width: 30px}
+
 .images {
     margin-top: 10px;
 }
@@ -511,4 +521,29 @@ select {
 .input-inline .form-floating {
     width: 90%;
     display: inline-block;
+}
+.ledigt .backarrow {
+    float: left;
+    margin-left: 30px;
+    font-size: .95rem;
+    color: var(--main-dark-color);
+}
+
+@media (max-width: 770px) {
+    .ledigt .header-center {
+        font-size: calc(1.075rem + 1.5vw);
+    }
+    .ledigt .backarrow {
+        font-size: .7rem;
+        margin-top: 2px;
+        margin-left: 0;
+    }
+    .lagenhet-info-detalj {
+        grid-template-columns: 1fr;
+        font-size: 1em;
+        margin-left: 25%;
+    }
+    .lagenhet-info-right {
+        width: 90%;
+    }
 }
